--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,18 +15,28 @@
 
   <tbody>
     <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= book.memo %></td>
-        <td><%= book.author %></td>
-        <td><%= book.picture %></td>
-        <td><%= link_to t('views.common.show'), book %></td>
-        <td><%= link_to t('views.common.edit'), edit_book_path(book) %></td>
-        <td><%= link_to t('views.common.destroy'), book, method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
-      </tr>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.memo %></td>
+      <td><%= book.author %></td>
+      <td><%= book.picture %></td>
+      <td><%= link_to t('views.common.show'), book %></td>
+      <td><%= link_to t('views.common.edit'), edit_book_path(book) %></td>
+      <td>
+        <%= link_to t('views.common.destroy'), book, method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
+      </td>
+    </tr>
     <% end %>
   </tbody>
 </table>
+<div class='paginate'>
+  <%= paginate @books %>
+</div>
+<div class='total_page_view'>
+  <p>データ件数 <%= @books.total_count %> 件の内 <%= @books.offset_value + 1 %> 〜 <%= @books.offset_value + @books.length %>
+    件を表示
+  </p>
+</div>
 
 <br>
 
