Fix: Translation error and typo
i18nの対応漏れとタイポを修正（PRでの指摘事項）

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,5 @@
-<h1><%= t_attr('new_books') %></h1>
+<h1><%= t('title.new_books') %></h1>
 
 <%= render 'form', book: @book %>
 
-<%= link_to t('buttom.back'), books_path %>
+<%= link_to t('button.back'), books_path %>
