--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
-<h1><%= t_attr('edit_books') %></h1>
+<h1><%= t('title.edit_books') %></h1>
 
 <%= render 'form', book: @book %>
 
-<%= link_to t('buttom.show'), @book %> |
-<%= link_to t('buttom.back'), books_path %>
+<%= link_to t('button.show'), @book %> |
+<%= link_to t('button.back'), books_path %>
