--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1><%= Book.model_name.human %></h1>
 
 <table>
@@ -15,15 +13,17 @@
 
   <tbody>
     <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= book.memo %></td>
-        <td><%= book.author %></td>
-        <td><%= book.picture %></td>
-        <td><%= link_to t('views.common.show'), book %></td>
-        <td><%= link_to t('views.common.edit'), edit_book_path(book) %></td>
-        <td><%= link_to t('views.common.destroy'), book, method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
-      </tr>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.memo %></td>
+      <td><%= book.author %></td>
+      <td><%= book.picture %></td>
+      <td><%= link_to t('views.common.show'), book %></td>
+      <td><%= link_to t('views.common.edit'), edit_book_path(book) %></td>
+      <td>
+        <%= link_to t('views.common.destroy'), book, method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
+      </td>
+    </tr>
     <% end %>
   </tbody>
 </table>
