Add: Self introductin to Users table
Usersテーブルに自己紹介のカラムを追加

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,12 +15,17 @@
 
 <div class="field">
   <%= f.label :postal_code %><br />
-  <%= f.text_field :postal_code, autofocus: true, autocomplete: "name" %>
+  <%= f.text_field :postal_code, autofocus: true %>
 </div>
 
 <div class="field">
   <%= f.label :adress %><br />
-  <%= f.text_field :adress, autofocus: true, autocomplete: "name" %>
+  <%= f.text_field :adress, autofocus: true %>
+</div>
+
+<div class="field">
+  <%= f.label :self_introduction %><br />
+  <%= f.text_field :self_introduction, autofocus: true %>
 </div>
 
 <div class="field">
