--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,9 @@
-<% if notice %>
-<p class="alert alert-success"><%= notice %></p>
-<% end %>
-<% if alert %>
-<p class="alert alert-danger"><%= alert %></p>
+<% flash.each do |message_type, message| %>
+<%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
 <% end %>
 <p class="navbar-text pull-right">
   <% if user_signed_in? %>
-  Logged in as <strong><%= current_user.email %></strong>.
+  Logged in as <strong><%= current_user.name %></strong>.
   <%= link_to 'Edit profile', edit_user_registration_path, class: 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
   <% else %>
