--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,3 +17,8 @@
   <strong><%= User.human_attribute_name(:adress) %>:</strong>
   <%= @user.adress %>
 </p>
+
+<p>
+  <strong><%= User.human_attribute_name(:self_introduction) %>:</strong>
+  <%= @user.self_introduction %>
+</p>
