Fix: the ability to delete user accounts
ユーザアカウントを削除する機能を修正

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
       <td><%= link_to t('views.common.show'), user_profile_path(user) %></td>
       <td><%= link_to t('views.common.edit'), edit_user_registration_path(user) %></td>
       <td>
-        <%= link_to t('views.common.destroy'), user_profile_path(user), method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
+        <%= link_to t('views.common.destroy'), registration_path(user), method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
       </td>
       <% end %>
     </tr>
