--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,17 @@
 <p>Hello <%= @resource.email %>!</p>
 
+<p>English mesasge</p>
 <p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
+
+<p>日本語のメッセージ</p>
+<p>パスワード変更の要求があったのでこのメールを送っています。以下のリンクよりパスワード変更を実行してください。</p>
+
+<p><%= link_to 'パスワードを変更する', edit_password_url(@resource, reset_password_token: @token) %></p>
+
+<p>もしこのリクエストを知らない場合は、このメールを破棄してください。</p>
+<p>パスワードは上のリンクから変えない限り変わりません。</p>
