--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,12 @@
-<h2>Sign up</h2>
+<h2><%= t('.sign_up') %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), local: true) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= render "devise/shared/error_messages", resource: resource %>
+
 
 <div class="field">
   <%= f.label :name %><br />
-  <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+  <%= f.text_field :name, autofocus: true, autocomplete: "email" %>
 </div>
 
 <div class="field">
@@ -15,23 +16,23 @@
 
 <div class="field">
   <%= f.label :postal_code %><br />
-  <%= f.text_field :postal_code, autofocus: true %>
+  <%= f.text_field :postal_code, autofocus: true, autocomplete: "email" %>
 </div>
 
 <div class="field">
   <%= f.label :adress %><br />
-  <%= f.text_field :adress, autofocus: true %>
+  <%= f.text_field :adress, autofocus: true, autocomplete: "email" %>
 </div>
 
 <div class="field">
   <%= f.label :self_introduction %><br />
-  <%= f.text_field :self_introduction, autofocus: true %>
+  <%= f.text_field :self_introduction, autofocus: true, autocomplete: "email" %>
 </div>
 
 <div class="field">
   <%= f.label :password %>
   <% if @minimum_password_length %>
-  <em>(<%= @minimum_password_length %> characters minimum)</em>
+  <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
   <% end %><br />
   <%= f.password_field :password, autocomplete: "new-password" %>
 </div>
@@ -42,6 +43,6 @@
 </div>
 
 <div class="actions">
-  <%= f.submit "Sign up" %>
+  <%= f.submit t('.sign_up') %>
 </div>
 <% end %>
