--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,13 +3,13 @@
 <% end %>
 <p class="navbar-text pull-right">
   <% if user_signed_in? %>
-  Logged in as <strong><%= current_user.name %></strong>.
-  <%= link_to 'Books List', books_path, class: 'navbar-link' %> |
-  <%= link_to 'Users List', users_path, class: 'navbar-link' %> |
-  <%= link_to 'Edit profile', edit_user_registration_path, class: 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
+  <%= t('logged_in_name') %> <strong><%= current_user.name %></strong>.
+  <%= link_to t('link.books_list'), books_path, class: 'navbar-link' %> |
+  <%= link_to t('link.users_list'), users_path, class: 'navbar-link' %> |
+  <%= link_to t('link.edit profile'), edit_user_registration_path, class: 'navbar-link' %> |
+  <%= link_to t('link.logout'), destroy_user_session_path, method: :delete, class: 'navbar-link'  %>
   <% else %>
-  <%= link_to "Sign up", new_user_registration_path, class: 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, class: 'navbar-link'  %>
+  <%= link_to t('devise.sessions.new.sign_in'), new_user_session_path, class: 'navbar-link'  %> |
+  <%= link_to t('devise.registrations.new.sign_up'), new_user_registration_path, class: 'navbar-link'  %>
   <% end %>
 </p>
