--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,12 @@
   <%= @user.self_introduction %>
 </p>
 
+<p>
+  <strong><%= User.human_attribute_name(:avatar) %>:</strong>
+  <%= image_tag @user.avatar.variant(resize: "100x100") if @user.avatar.attached?%>
+</p>
+
 <% if current_user == @user %>
-  <%= link_to t('views.common.edit'), edit_user_registration_path %> |
+<%= link_to t('views.common.edit'), edit_user_registration_path %> |
 <% end %>
 <%= link_to t('views.common.back'), users_path %>
