--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,4 +1,3 @@
-<%= form_with(model: current_user.active_follows.find_by(followed_id: @user.id),
-            html: { method: :delete }, local: true) do |f| %>
+<%= form_with(url: follows_path(followed_id: @user.id) ,html: { method: :delete }, local: true) do |f| %>
 <%= f.submit t('follow.unfollow'), class: "btn btn-default" %>
 <% end %>
