--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,15 +1,15 @@
-<% @user ||= current_user %>
+<% user ||= current_user %>
 <div class="stats">
-  <a href="<%= following_user_path(@user) %>">
-    <strong id="following" class="stat">
-      <%= @user.following.count %>
+  <a href="<%= followings_user_path(user) %>">
+    <strong class="stat">
+      <%= user.followings.count %>
     </strong>
     <%= t('follow.following') %>
   </a>
   <br>
-  <a href="<%= followers_user_path(@user) %>">
-    <strong id="followers" class="stat">
-      <%= @user.followers.count %>
+  <a href="<%= followers_user_path(user) %>">
+    <strong class="stat">
+      <%= user.followers.count %>
     </strong>
     <%= t('follow.followers') %>
   </a>
