--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,3 +1,3 @@
-<%= form_with(url: follows_path(followed_id: @user.id) ,html: { method: :delete }, local: true) do |f| %>
+<%= form_with(url: follows_path(followed_id: user.id) ,html: { method: :delete }) do |f| %>
 <%= f.submit t('follow.unfollow'), class: "btn btn-default" %>
 <% end %>
