--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,11 +34,11 @@
 </p>
 
 <p>
-  <%= render 'shared/stats' %>
+  <%= render partial: 'shared/stats', locals: {user: @user} %>
 </p>
 
 <p>
-  <%= render 'follow_form' %>
+  <%= render partial: 'follow_form', locals: {user: @user}%>
 </p>
 
 <% if current_user == @user %>
