Add: Report index page(controller and view)
日報のインデックスページ作成(コントローラとビュー)

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= t('views.common.title_show', name: User.model_name.human) %></h1>
 
+<strong><%= link_to t('reports.title_show'), user_reports_path(@user) %></strong>
+
 <p>
   <strong><%= User.human_attribute_name(:email) %>:</strong>
   <%= @user.email %>
@@ -28,8 +30,8 @@
 <p>
   <strong><%= User.human_attribute_name(:avatar) %>:</strong>
   <% if @user.avatar.attached? %>
-    <br>
-    <%= image_tag @user.avatar.variant(resize_to_fill: [150, 150])%>
+  <br>
+  <%= image_tag @user.avatar.variant(resize_to_fill: [150, 150])%>
   <% end %>
 </p>
 
@@ -39,16 +41,16 @@
 </ul>
 
 <% if current_user.following?(@user) %>
-  <%= form_with(url: user_relationships_path(@user), method: :delete, local: true) do |f| %>
-    <%= f.submit t('.destroy') %>
-  <% end %>
+<%= form_with(url: user_relationships_path(@user), method: :delete, local: true) do |f| %>
+<%= f.submit t('.destroy') %>
+<% end %>
 <% elsif current_user != @user %>
-  <%= form_with(url: user_relationships_path(@user), local: true) do |f| %>
-    <%= f.submit t('.create') %>
-  <% end %>
+<%= form_with(url: user_relationships_path(@user), local: true) do |f| %>
+<%= f.submit t('.create') %>
+<% end %>
 <% end %>
 
 <% if current_user == @user %>
-  <%= link_to t('views.common.edit'), edit_user_registration_path %> |
+<%= link_to t('views.common.edit'), edit_user_registration_path %> |
 <% end %>
 <%= link_to t('views.common.back'), users_path %>
