--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,5 +1,7 @@
 <h1><%= "#{@user.name} の #{Report.model_name.human}" %></h1>
-
+<% if current_user == @user %>
+<strong><%= link_to t('views.common.new'), new_report_path %></strong>
+<% end %>
 <table>
   <thead>
     <tr>
@@ -15,11 +17,15 @@
       <td><%= report.title %></td>
       <td><%= report.created_at %></td>
       <td><%= link_to t('views.common.show'), report %></td>
-      <td><%= link_to t('views.common.edit'), edit_user_report_path(report) %></td>
+      <% if current_user == @user %>
+      <td><%= link_to t('views.common.edit'), edit_report_path(report) %></td>
       <td>
         <%= link_to t('views.common.destroy'), report, method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
       </td>
+      <% end %>
     </tr>
     <% end %>
   </tbody>
 </table>
+<%= paginate @reports%>
+<%= link_to t('views.common.back'), @user %>
