--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -15,7 +15,7 @@
     <% @reports.each do |report| %>
     <tr>
       <td><%= report.title %></td>
-      <td><%= report.created_at %></td>
+      <td><%= report.created_at.to_s(:datetime_jp) %></td>
       <td><%= link_to t('views.common.show'), report %></td>
       <% if current_user == @user %>
       <td><%= link_to t('views.common.edit'), edit_report_path(report) %></td>
