--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong><%= Report.human_attribute_name(:created_at) %>:</strong>
-  <%= @report.created_at %>
+  <%= @report.created_at.to_s(:datetime_jp) %>
 </p>
 
 <p>
