Add: The function to create and delete comments in Report
日報にコメント作成と削除機能の追加

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -14,5 +14,9 @@
   <strong><%= Report.human_attribute_name(:content) %>:</strong>
   <%= @report.content %>
 </p>
+<br>
+<%= render 'comments/show', comments: @comments%>
+<br>
+<%= render 'comments/form', comment: @comment, report: @report, error_comment: @error_comment %>
 
 <%= link_to t('views.common.back'), user_reports_path(@report.user_id) %>
