--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @report, local: true) do |form| %>
+<%= form_with(model: report, local: true) do |form| %>
 
 <div class="field">
   <%= form.label :title %>
