Improve: comments delete function to Report
日報のコメント削除機能を修正

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -17,7 +17,8 @@
 
 <div>
   <%= form.hidden_field :commentable_type, :value => comment.commentable_type %>
-  <%= form.hidden_field :commentable_id, :value => params[:id]%>
+  <%= form.hidden_field :commentable_id, :value => comment.commentable_id %>
+
 </div>
 
 <div>
