Refactoring: Check for code duplication, etc
コードの重複などを見直しリファクタリングを実行

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,7 +12,7 @@
 
 <div>
   <%= form.label :content %>
-  <%= form.text_area :content %>
+  <%= form.text_area :content ,required: true%>
 </div>
 
 <div>
