--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th><%= Comment.human_attribute_name(:content) %></th>
       <th><%= Comment.human_attribute_name(:created_at) %></th>
-      <th><%= User.human_attribute_name(:name) %></th>
+      <th><%= Comment.human_attribute_name(:user) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +15,11 @@
       <td><%= comment.content %></td>
       <td><%= comment.created_at.to_s(:datetime_jp) %></td>
       <% user = User.find(comment.user_id)%>
+      <% if user.name.present? %>
       <td><%= user.name %></td>
+      <% else %>
+      <td><%= user.email %></td>
+      <% end %>
       <% if comment.user_id == current_user.id%>
       <td>
         <%= link_to t('views.common.destroy'), polymorphic_path([commentable_type, comment]), method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
