--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t('views.common.title_edit', name: Book.model_name.human) %></h1>
 
-<%= render 'form', book: @book %>
+<%= render 'form', book: @content %>
 
-<%= link_to t('views.common.show'), @book %> |
+<%= link_to t('views.common.show'), @content %> |
 <%= link_to t('views.common.back'), books_path %>
